--- a/java/api/src/main/resources/ValidationMessages.properties
+++ b/java/api/src/main/resources/ValidationMessages.properties
@@ -31,5 +31,6 @@ state.size=State must be between {min} and {max} characters.
 contact.not.null=Contact cannot be null.
 address.not.null=Address cannot be null.
 plan.not.null=Plan cannot be null.
+user.not.null=User cannot be null.
 
 
